# Workshop3

./: Demo.docx  README.md  main.py  nodes.py  pyproject.toml  state.py  utils.py
agents/: __init__.py  coordinator.py  flight_agent.py  traveller.py
dummydata/: flight_timing.txt
tools/: __init__.py  budget_calculation.py  destination_weather.py  flights_timing.py
